test/files/neg/plugin-rafter-before-1/lib/plugins.jar.desired.sha1
1b9020d80db1bcb54d7f67c4f9b78907368dbadd ?plugins.jar
